[gd_scene load_steps=9 format=4 uid="uid://bts7lmyuavljy"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_ai1dk"]
[ext_resource type="Texture2D" uid="uid://mf0dvw4owtkm" path="res://sprites/bg_extended.png" id="2_llk0a"]
[ext_resource type="TileSet" uid="uid://coh6k1wo8sh15" path="res://stone_brick_tiles.tres" id="3_v1v44"]
[ext_resource type="PackedScene" uid="uid://cw7cwr4lfsvse" path="res://scenes/mum.tscn" id="3_y7bcy"]
[ext_resource type="Script" path="res://scripts/cam_zone_manager.gd" id="7_p82ln"]
[ext_resource type="AudioStream" uid="uid://ckhkbjri60iki" path="res://sound/music.wav" id="11_3jajx"]
[ext_resource type="Script" path="res://scripts/death_zone.gd" id="12_pixy1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17gig"]
size = Vector2(1359, 754)

[node name="Level2" type="Node2D"]
process_mode = 3
position = Vector2(3, 0)
script = ExtResource("1_ai1dk")

[node name="Mum" parent="." instance=ExtResource("3_y7bcy")]
position = Vector2(215, 206)
debug = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAUAAAALAAIAAAAAAAQAAAALAAIAAAAAAAMAAAALAAIAAAAAAAIAAAALAAIAAAAAAAEAAAALAAIAAAAAAAAAAAALAAAAAAAAAAYAAAALAAIAAAAAAAcAAAALAAIAAAAAAAgAAAALAAIAAAD//wAAAAAIAAAAAAD//wEAAAAIAAEAAAD//wIAAAAIAAEAAAD//wMAAAAIAAEAAAD//wQAAAAIAAEAAAD//wUAAAAIAAEAAAD//wYAAAAIAAEAAAD//wcAAAAIAAEAAAD//wgAAAAIAAEAAAADABIAAAAJAAMAAAAFABEAAAAKAAAAAAALABEAAAAKAAAAAAAMABEAAAAKAAAAAAANABEAAAAKAAAAAAAOABEAAAAKAAAAAAAPABEAAAAKAAAAAAAQABEAAAAKAAAAAAARABEAAAAKAAAAAAASABEAAAAKAAAAAAATABEAAAAKAAAAAAAUABEAAAAKAAAAAAAVABEAAAAKAAAAAAAWABEAAAAKAAAAAAAXABEAAAAKAAAAAAAYABEAAAAKAAAAAAAZABEAAAAKAAAAAAAaABEAAAAKAAAAAAAbABEAAAAKAAAAAAAcABEAAAAKAAAAAAAdABEAAAALAAAAAAAdABIAAAALAAMAAAAcABIAAAAJAAMAAAAbABIAAAAJAAMAAAAaABIAAAAJAAMAAAAZABIAAAAJAAMAAAAYABIAAAAJAAMAAAAXABIAAAAJAAMAAAAWABIAAAAJAAMAAAAVABIAAAAJAAMAAAAUABIAAAAJAAMAAAATABIAAAAJAAMAAAASABIAAAAJAAMAAAARABIAAAAJAAMAAAAQABIAAAAJAAMAAAAPABIAAAAJAAMAAAAOABIAAAAJAAMAAAANABIAAAAJAAMAAAALABIAAAAJAAMAAAAKABIAAAAJAAMAAAAJABIAAAAJAAMAAAAIABIAAAAJAAMAAAAHABIAAAAJAAMAAAAGABEAAAAKAAAAAAAJABEAAAAKAAAAAAAKABEAAAAKAAAAAAAMABIAAAAJAAMAAAD//wkAAAAIAAEAAAAAAAkAAAALAAIAAAAAAAoAAAALAAIAAAD//wsAAAAIAAEAAAD//wwAAAAIAAEAAAAAAAwAAAALAAIAAAAAAA0AAAALAAIAAAACABEAAAAKAAAAAAACABIAAAAJAAMAAAABABIAAAAJAAMAAAAAABEAAAAGAAEAAAD//xEAAAAIAAEAAAD//w4AAAAIAAEAAAD//w8AAAAIAAEAAAAAABAAAAALAAIAAAABABEAAAAKAAAAAAAAABIAAAAJAAMAAAD//xIAAAAIAAMAAAD//xAAAAAIAAEAAAAAAA8AAAALAAIAAAAAAA4AAAALAAIAAAD//w0AAAAIAAEAAAAAAAsAAAALAAIAAAD//woAAAAIAAEAAAAJAAkAAAAIAAMAAAAKAAkAAAAJAAMAAAALAAkAAAALAAMAAAALAAgAAAALAAIAAAAKAAgAAAAJAAIAAAAJAAgAAAAIAAEAAAALAAcAAAALAAIAAAAKAAcAAAAJAAIAAAAJAAcAAAAIAAEAAAAJAAYAAAAIAAEAAAAKAAYAAAAJAAIAAAAJAAUAAAAIAAEAAAAJAAQAAAAIAAEAAAAKAAUAAAAJAAIAAAALAAUAAAALAAIAAAALAAYAAAALAAIAAAAKAAQAAAAJAAIAAAAKAAMAAAAJAAIAAAAJAAMAAAAIAAEAAAAJAAEAAAAIAAEAAAAKAAEAAAAJAAIAAAALAAIAAAALAAIAAAALAAMAAAALAAIAAAAKAAIAAAAJAAIAAAAJAAIAAAAIAAEAAAALAAQAAAALAAIAAAAJAAAAAAAIAAAAAAAKAAAAAAAKAAAAAAALAAAAAAALAAAAAAALAAEAAAALAAIAAAAIABEAAAAKAAAAAAAHABEAAAAKAAAAAAAGABIAAAAJAAMAAAAFABIAAAAJAAMAAAAEABIAAAAJAAMAAAADABEAAAAKAAAAAAAEABEAAAAKAAAAAAA=")
tile_set = ExtResource("3_v1v44")

[node name="CamZoneManager" type="Node2D" parent="."]
script = ExtResource("7_p82ln")
zones = Array[Rect2i]([Rect2i(0, 0, 3, 3)])

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthContainer" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="ResetTimer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_3jajx")
volume_db = -14.328
autoplay = true

[node name="THE DANGER ZONE OOOH SCARY" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("12_pixy1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="THE DANGER ZONE OOOH SCARY"]
position = Vector2(936, 1600)
shape = SubResource("RectangleShape2D_17gig")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 384)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("2_llk0a")
centered = false

[connection signal="player_defeated" from="Mum" to="." method="_on_mum_player_defeated"]
[connection signal="player_take_damage" from="Mum" to="." method="_on_mum_player_take_damage"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
[connection signal="body_entered" from="THE DANGER ZONE OOOH SCARY" to="THE DANGER ZONE OOOH SCARY" method="_on_body_entered"]
